--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ VITE_PROJECTID = market-place-54b3b
 VITE_STORAGEBUCKET = market-place-54b3b.appspot.com
 VITE_MESSAGINGSENDERID = 1097029058644
 VITE_APPID = 1:1097029058644:web:36bce15e1220a02bc72dc1
+
+VITE_URL = http://localhost:5000
